tốt nghiệp lần 3

--- a/newgit.html
+++ b/newgit.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chúc mừng</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>Lễ tốt nghiệp git</h1>
-    <h2>tốt nghiệp lần 1</h2>
+    <h5>em yêu tốt nghiệp r ngủ nè</h5>
   </body>
 </html>
